# ParallelProgrammingCourse

./: .dockerignore  Dockerfile
Projects/LiveOfBoids/: CMakeLists.txt  benchmark_boids.py  conanfile.txt  run  run.oar
Projects/LiveOfBoids/include/: Grid.hpp  config.hpp
Projects/LiveOfBoids/src/: CMakeLists.txt  Grid.cpp  config.cpp  main.cpp
Projects/LiveOfBoids/src/agents/: AgentFactory.cpp
TPs/ParallelProgrammingTP/: extract_results.py  run
TPs/ParallelProgrammingTP/src/MatrixVector/: CSRMatrix.h
TPs/ParallelProgrammingTP/src/TP2/: spmv_mpi.cpp  spmv_mpi_i.cpp
